<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.foi.air.brioniinfo.FragmentVozniRed"
    android:background="#C2C3FF">

    <AutoCompleteTextView
        android:id="@+id/autoTxtPolazak"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:hint="@string/autoTxtPolazak"
        android:layout_marginLeft="50dp"
        android:textSize="20sp"
        android:textColor="#06004A"/>

    <AutoCompleteTextView
        android:id="@+id/autoTxtDolazak"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:hint="@string/autoTxtDolazak"
        android:layout_marginLeft="50dp"
        android:textSize="20sp"
        android:textColor="#06004A"/>

    <Button
        android:id="@+id/btnPretrazi"
        android:onClick="pretraziVozniRed"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="100dp"
        android:text="@string/btnPretrazi"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#a6acff"/>

    <TextView
        android:id="@+id/txtView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="10dp"
        android:text="@string/FragmentVozniRed"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#06004A"/>



</RelativeLayout>
